@@ -1,3 +1,8 @@
+Fri May  1 17:46:05  2009  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * tests/Map_Manager_Test.cpp:
+          If table_size equals zero we fail directly
+
 Fri May  1 17:29:05  2009  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ace/Default_Constants.h:
